--- a/-imagine/imagine.html
+++ b/-imagine/imagine.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CHEHAOYUAN</title>
+  <title>Chehaoyuan</title>
   <link rel="stylesheet" href="./css/imaginestyle.css">
 </head>
 <style>
@@ -25,7 +25,7 @@
             <div class="trueban">
             <div style="width: 30%;height: 22px;">
                 <p style="font-family: Abhaya-Regular;font-size:18pt;text-align: left;margin: 0;">
-                <a href="index.html" class="newlink">Front Page</a>
+                <a href="../index.html" class="newlink">Front Page</a>
                 </p>
             </div>
             <div class="logo" style="height: 22px;width: 318px;background-image:url(image/whitelogo.png);background-size: cover;margin:0 auto;"></div>
@@ -35,7 +35,7 @@
                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                 <a href="#" class="newlink">Design</a>
                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                <a href="#" class="newlink">Me</a>
+                <a href="../-me/item.html" class="newlink">Me</a>
                 </p>
             </div>
             </div>
