--- a/-me/item.html
+++ b/-me/item.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CHEHAOYUAN</title>
+  <title>Chehaoyuan</title>
   <link rel="stylesheet" href="./css/itemstyle.css">
 
 </head>
@@ -12,13 +12,13 @@
   <div class="trueban">
     <div style="width: 30%;height: 22px;">
       <p style="font-family: Abhaya-Regular;font-size:18pt;text-align: left;margin: 0;">
-      <a href="index.html" class="newlink">Front Page</a>
+      <a href="../index.html" class="newlink">Front Page</a>
       </p>
     </div>
     <div class="logo" style="height: 22px;width: 318px;background-image:url(image/blacklogo.png);background-size: cover;margin:0 auto;"></div>
     <div style="width: 30%;height: 22px;">
       <p style="font-family: Abhaya-Regular;font-size:18pt;margin: 0;text-align: right;">
-        <a href="#" class="newlink">Imagine</a>
+        <a href="../-imagine/imagine.html" class="newlink">Imagine</a>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         <a href="#" class="newlink">Design</a>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
