--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Chehaoyuan</title>
     <link rel="stylesheet" href="./css/indexstyle.css">
 </head>
 <body>
@@ -26,7 +26,7 @@
         <div style="height: 54px;width: 100%;background-color: transparent;"></div>
         <div class="bannerword">
             <div style="height: 40px;width: 4.25%;background-color:transparent;"></div>
-            <p style="font-family: Abhaya-Regular; font-size: 20pt;text-align: center;"><a href="imagine.html">Imagine About Life >>></a></p>
+            <p style="font-family: Abhaya-Regular; font-size: 20pt;text-align: center;"><a href="./-imagine/imagine.html">Imagine About Life >>></a></p>
         </div>
         <div class="bannerword">
             <div style="height: 40px;width: 4.25%;background-color:transparent;"></div>
@@ -44,7 +44,7 @@
         <div style="height: 5px; background-color: transparent;"></div>
         <div class="bannerword">
             <div style="height: 40px;width: 4.25%;background-color: transparent;"></div>
-            <p style="font-family: Abhaya-Regular; font-size: 20pt;text-align: center;"><a href="item.html">About Me >>></a></p>
+            <p style="font-family: Abhaya-Regular; font-size: 20pt;text-align: center;"><a href="./-me/item.html">About Me >>></a></p>
         </div>
         <div class="bannerword">
             <div style="height: 40px;width: 4.25%;background-color: transparent;"></div>
