--- a/-me/item.html
+++ b/-me/item.html
@@ -15,7 +15,7 @@
       <a href="../index.html" class="newlink">Front Page</a>
       </p>
     </div>
-    <div class="logo" style="height: 22px;width: 318px;background-image:url(image/blacklogo.png);background-size: cover;margin:0 auto;"></div>
+    <div class="logo" style="height: 22px;width: 318px;background-image:url(../image/blacklogo.png);background-size: cover;margin:0 auto;"></div>
     <div style="width: 30%;height: 22px;">
       <p style="font-family: Abhaya-Regular;font-size:18pt;margin: 0;text-align: right;">
         <a href="../-imagine/imagine.html" class="newlink">Imagine</a>
@@ -30,7 +30,7 @@
 
 <div style="width: 100%;height: 126px;background-color:transparent"></div>
 <div style="width: 100%; height:560px;background-color: transparent">
-  <div style="width: 80%; height: 560px;background-image: url(image/aboutmepic.png); margin: 0 auto;"></div>
+  <div style="width: 80%; height: 560px;background-image: url(../image/aboutmepic.png); margin: 0 auto;"></div>
 </div>
 
 <!-- partial:index.partial.html -->
@@ -45,22 +45,22 @@
       <p style="font-family: Abhaya-Regular;font-size:15pt;text-align:left;margin: 20px 0 0 0;color: #000;">The experience of the school with a strong Internet and technology atmosphere made me deeply aware of the leading role of technology in industrial transformation, the importance of design for technology transformation and brand building, and the importance of leadership in the "Internet +" era.</p>
       <p style="font-family: Abhaya-Regular;font-size:15pt;text-align:left;margin: 20px 0 0 0;color: #000;">In addition to the cultivation of my professional skills, I also actively participate in various activities and keep moving forward.</p>
     </div>
-    <div class="black" style="background-image: url(./image/intro1.jpg);background-size: cover;">
+    <div class="black" style="background-image: url(../image/intro1.jpg);background-size: cover;">
       <span><p style="font-family: Abhaya-Regular;font-size:10pt;color: #000;margin: 5px auto;">Be selected into the Leadership Improvement Experimental Class of SEM.</p></span>
     </div>
-    <div class="red" style="background-image: url(./image/intro2.jpg);background-size: cover;">
+    <div class="red" style="background-image: url(../image/intro2.jpg);background-size: cover;">
       <span><p style="font-family: Abhaya-Regular;font-size:10pt;color: #000;margin: 5px 10px;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Worked in the student union for 3 years.</p></span>
     </div>
-    <div class="blue" style="background-image: url(./image/intro5.png);background-size: cover;">
+    <div class="blue" style="background-image: url(../image/intro5.png);background-size: cover;">
       <span><p style="font-family: Abhaya-Regular;font-size:10pt;color: #000;margin: 5px 10px;">I like to sing and enjoy acting.</p></span>
     </div>
-    <div class="orange" style="background-image: url(./image/intro4.jpg);background-size: cover;">
+    <div class="orange" style="background-image: url(../image/intro4.jpg);background-size: cover;">
       <span><p style="font-family: Abhaya-Regular;font-size:10pt;color: #000;margin: 5px auto;">Worked as a supporting teacher in Pingjiang, Hunan.</p></span>
     </div>
-    <div class="green" style="background-image: url(./image/intro3.jpg);background-size: cover;">
+    <div class="green" style="background-image: url(../image/intro3.jpg);background-size: cover;">
       <span><p style="font-family: Abhaya-Regular;font-size:10pt;color: #000;margin: 5px auto;">Work as a volunteer at Beijing International Design Week.</p></span>
     </div>
-    <div class="yellow" style="background-image: url(./image/intro6.jpg);background-size: cover;">
+    <div class="yellow" style="background-image: url(../image/intro6.jpg);background-size: cover;">
       <span><p style="font-family: Abhaya-Regular;font-size:10pt;color: #000;margin: 5px auto;">Had social practice in Wuhan, Changsha and other places.</p></span>
     </div>
     <div style="width: 100%; height: 30px;background-color: transparent;"></div>
