--- a/-imagine/imagine.html
+++ b/-imagine/imagine.html
@@ -9,7 +9,7 @@
     .imaginepic{
     width: 100%;
     height: 80vh;
-    background-image: url(./image/2newimaginepic.png);
+    background-image: url(../image/2newimaginepic.png);
     background-color: white;
     background-repeat: no-repeat;
     background-attachment: fixed;
@@ -28,7 +28,7 @@
                 <a href="../index.html" class="newlink">Front Page</a>
                 </p>
             </div>
-            <div class="logo" style="height: 22px;width: 318px;background-image:url(image/whitelogo.png);background-size: cover;margin:0 auto;"></div>
+            <div class="logo" style="height: 22px;width: 318px;background-image:url(../image/whitelogo.png);background-size: cover;margin:0 auto;"></div>
             <div style="width: 30%;height: 22px;">
                 <p style="font-family: Abhaya-Regular;font-size:18pt;margin: 0;text-align: right;">
                 <a href="#" class="newlink">Imagine</a>
