--- a/-imagine/imagine.html
+++ b/-imagine/imagine.html
@@ -8,8 +8,8 @@
 <style>
     .imaginepic{
     width: 100%;
-    height: 80vh;
-    background-image: url(../image/2newimaginepic.png);
+    height: 100vh;
+    background-image: url(../image/imaginepic.png);
     background-color: white;
     background-repeat: no-repeat;
     background-attachment: fixed;
@@ -43,37 +43,58 @@
         
     </div>
     <div class="content">
-        <div class="cards" style="width: 80%;height:1000px;margin: 0 auto;">
+        <div class="cards" style="width: 80%;height:600px;margin: 0 auto;">
             <!-- 需分配宽度给卡片单元格 -->
             <div class="cardsitem">
-                <div class="cardpic"></div>
-                <div class="cardname"></div>
-                <div class="cardintro"></div>
+                <a href="#">
+                    <div class="cardpic" style="background-image: url(./smallwork/smallwork1/A-1.png);background-size: cover;"></div>
+                    <div class="cardname"><p style="font-size: 20px;text-align: center;font-family: Abhaya-Regular;">Taiyuan Colors - Taiyuan City Badge Design</p></div>
+                    <div class="cardintro"><p style="font-size: 15px;text-align: center;font-family: Abhaya-Regular;color: slategrey;">Graphic Design</p></div>
+                </a>
             </div>
             <div class="cardsitem">
-                <div class="cardpic"></div>
-                <div class="cardname"></div>
-                <div class="cardintro"></div>
+                <div class="cardpic" style="background-image: url(./smallwork/smallwork2/A-1.png);background-size: cover;"></div>
+                <div class="cardname"><p style="font-size: 20px;text-align: center;font-family: Abhaya-Regular;">Walk with me on the streets of Taiyuan</p></div>
+                <div class="cardintro"><p style="font-size: 15px;text-align: center;font-family: Abhaya-Regular;color: slategrey;">Layout Design</p></div>
             </div>
             <div class="cardsitem">
-                <div class="cardpic"></div>
-                <div class="cardname"></div>
-                <div class="cardintro"></div>
+                <div class="cardpic" style="background-image: url(./smallwork/smallwork3/A-1.png);background-size: cover;"></div>
+                <div class="cardname"><p style="font-size: 20px;text-align: center;font-family: Abhaya-Regular;">Wallet Assassin—Double Eleven IP Design</p></div>
+                <div class="cardintro"><p style="font-size: 15px;text-align: center;font-family: Abhaya-Regular;color: slategrey;">IP design</p></div>
+            </div>
+        </div>
+        <div class="cards" style="width: 80%;height:600px;margin: 0 auto;">
+            <div class="cardsitem">
+                <div class="cardpic" style="background-image: url(./smallwork/smallwork4/A-1.png);background-size: cover;"></div>
+                <div class="cardname"><p style="font-size: 20px;text-align: center;font-family: Abhaya-Regular;">What he contains</p></div>
+                <div class="cardintro"><p style="font-size: 15px;text-align: center;font-family: Abhaya-Regular;color: slategrey;">poster design</p></div>
             </div>
             <div class="cardsitem">
-                <div class="cardpic"></div>
-                <div class="cardname"></div>
-                <div class="cardintro"></div>
+                <div class="cardpic" style="background-image: url(./smallwork/smallwork5/A-1.png);background-size: cover;"></div>
+                <div class="cardname"><p style="font-size: 20px;text-align: center;font-family: Abhaya-Regular;">Something about skating and skiing</p></div>
+                <div class="cardintro"><p style="font-size: 15px;text-align: center;font-family: Abhaya-Regular;color: slategrey;">infographic design</p></div>
             </div>
             <div class="cardsitem">
-                <div class="cardpic"></div>
-                <div class="cardname"></div>
-                <div class="cardintro"></div>
+                <div class="cardpic" style="background-image: url(./smallwork/smallwork6/A-1.png);background-size: cover;"></div>
+                <div class="cardname"><p style="font-size: 20px;text-align: center;font-family: Abhaya-Regular;">Modeling works</p></div>
+                <div class="cardintro"><p style="font-size: 15px;text-align: center;font-family: Abhaya-Regular;color: slategrey;">Product design</p></div>
+            </div>
+        </div>
+        <div class="cards" style="width: 80%;height:600px;margin: 0 auto;">
+            <div class="cardsitem">
+                <div class="cardpic" style="background-color: white;"></div>
+                <div class="cardname" style="background-color: white;"></div>
+                <div class="cardintro" style="background-color: white;"></div>
             </div>
             <div class="cardsitem">
-                <div class="cardpic"></div>
-                <div class="cardname"></div>
-                <div class="cardintro"></div>
+                <div class="cardpic" style="background-image: url(./smallwork/smallwork7/A-1.png);background-size: cover;"></div>
+                <div class="cardname"><p style="font-size: 20px;text-align: center;font-family: Abhaya-Regular;">"JIAN de PAN" rocket-shaped fruit plate</p></div>
+                <div class="cardintro"><p style="font-size: 15px;text-align: center;font-family: Abhaya-Regular;color: slategrey;">Product design</p></div>
+            </div>
+            <div class="cardsitem">
+                <div class="cardpic" style="background-color: white;"></div>
+                <div class="cardname" style="background-color: white;"></div>
+                <div class="cardintro" style="background-color: white;"></div>
             </div>
         </div>
     </div>
