--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div style="height: 5px; background-color: transparent;"></div>
         <div class="bannerword">
             <div style="height: 40px;width: 4.25%;background-color: transparent;"></div>
-            <p style="font-family: Abhaya-Regular; font-size: 20pt;text-align: right;"><a>Design Changes Life >>></a></p>
+            <p style="font-family: Abhaya-Regular; font-size: 20pt;text-align: right;"><a href="./ARpackage/ARpackage.html">Design Changes Life >>></a></p>
         </div>
         <div class="bannerword">
             <div style="height: 40px;width: 4.25%;background-color:transparent;"></div>
