--- a/index.html
+++ b/index.html
@@ -20,50 +20,50 @@
         <div style="width: 100%;height: 7.5%;background-color: transparent"></div>
         <!-- logo -->
         <div class="logo">
-            <div style="height: 22px;width: 4.25%;background-color:transparent"></div>
+            <div style="height: 22px;width: 6.25%;background-color:transparent"></div>
             <div style="height: 22px;width: 318px;background-image:url(image/whitelogo.png);background-size: cover;"></div>
         </div>
         <div style="height: 54px;width: 100%;background-color: transparent;"></div>
         <div class="bannerword">
-            <div style="height: 40px;width: 4.25%;background-color:transparent;"></div>
-            <p style="font-family: Abhaya-Regular; font-size: 20pt;text-align: center;"><a href="./-imagine/imagine.html">Imagine About Life >>></a></p>
+            <div style="height: 40px;width: 6.25%;background-color:transparent;"></div>
+            <p style="font-family: Abhaya-Regular; font-size: 28pt;text-align: center;"><a href="./-imagine/imagine.html" style="color: F9F9F9;background-color:transparent;">Imagine About Life >>></a></p>
         </div>
         <div class="bannerword">
-            <div style="height: 40px;width: 4.25%;background-color:transparent;"></div>
-            <p style="font-family: Abhaya-Regular; font-size: 15pt;text-align: center;color: #0047ff;">The way the world works in my eyes.</p>
-        </div>
-        <div style="height: 5px; background-color: transparent;"></div>
-        <div class="bannerword">
-            <div style="height: 40px;width: 4.25%;background-color: transparent;"></div>
-            <p style="font-family: Abhaya-Regular; font-size: 20pt;text-align: right;"><a href="./ARpackage/ARpackage.html">Design Changes Life >>></a></p>
-        </div>
-        <div class="bannerword">
-            <div style="height: 40px;width: 4.25%;background-color:transparent;"></div>
-            <p style="font-family: Abhaya-Regular; font-size: 15pt;text-align: center;color: #0047ff;">Apply design thinking to all aspects of life.</p>
+            <div style="height: 40px;width: 6.25%;background-color:transparent;"></div>
+            <p style="font-family: Abhaya-Regular; font-size: 13pt;text-align: center;color:#DADADA;background-color:transparent;height: 25px;">The way the world works in my eyes.</p>
         </div>
         <div style="height: 5px; background-color: transparent;"></div>
         <div class="bannerword">
-            <div style="height: 40px;width: 4.25%;background-color: transparent;"></div>
-            <p style="font-family: Abhaya-Regular; font-size: 20pt;text-align: center;"><a href="./-me/item.html">About Me >>></a></p>
+            <div style="height: 40px;width: 6.25%;background-color: transparent;"></div>
+            <p style="font-family: Abhaya-Regular; font-size: 28pt;text-align: right;"><a href="./ARpackage/ARpackage.html" style="color: F9F9F9;background-color:transparent;">Design Changes Life >>></a></p>
         </div>
         <div class="bannerword">
-            <div style="height: 40px;width: 4.25%;background-color: transparent;"></div>
-            <p style="font-family: Abhaya-Regular; font-size: 15pt;text-align: center;color: #0047ff;">Design based, technology drived, always on the road.</p>
+            <div style="height: 40px;width: 6.25%;background-color:transparent;"></div>
+            <p style="font-family: Abhaya-Regular; font-size: 13pt;text-align: center;color: #DADADA;background-color: transparent;height: 25px;">Apply design thinking to all aspects of life.</p>
         </div>
         <div style="height: 5px; background-color: transparent;"></div>
         <div class="bannerword">
-            <div style="height: 40px;width: 4.25%;background-color: transparent;"></div>
-            <p style="font-family: Abhaya-Regular; font-size: 20pt;text-align: center;"><a>Contact Me >>></a></p>
+            <div style="height: 40px;width: 6.25%;background-color: transparent;"></div>
+            <p style="font-family: Abhaya-Regular; font-size: 28pt;text-align: center;"><a href="./-me/item.html" style="color: F9F9F9;background-color: transparent;">About Me >>></a></p>
+        </div>
+        <div class="bannerword">
+            <div style="height: 40px;width: 6.25%;background-color: transparent;"></div>
+            <p style="font-family: Abhaya-Regular; font-size: 13pt;text-align: center;color: #DADADA;background-color:transparent;height: 25px;">Design based, technology drived, always on the road.</p>
+        </div>
+        <div style="height: 5px; background-color: transparent;"></div>
+        <div class="bannerwordemail">
+            <div style="height: 40px;width: 6.25%;background-color: transparent;"></div>
+            <div class="email" style="color: white"><p style="margin-top:5px;font-family: Abhaya-Regular; font-size: 15pt;background-color: #0047ff;">email:chehaoyuan0116@163.com</p></div>
         </div>
         <div style="height: 100px; background-color: transparent;"></div>
-        <div class="intro">
+        <!-- <div class="intro">
             <div style="height: 203px; width: 1080px; background-color: transparent;"></div>
             <div style="height: 300px; width: 600px;">
                 <p style="font-family: Abhaya-Medium; font-size: 25pt;text-align: left;color: #FF0000;">Athena des Myron</p>
                 <div style="height: 20px;"></div>
-                <p style="font-family: Abhaya-Medium; font-size: 15pt;text-align: left;color: #763D3D;">Athena is the goddess of wisdom in ancient Greek mythology, and is considered the goddess of war, craftsmanship and strategy. She is the figure of wisdom, skill, and strategy, and her wit makes her a concern in military and political strategy. Similar to product management, Athena was a decision maker, innovator and leader. She led the Greek army to victory in battle and also innovated in the field of handicrafts, such as pioneering the method of weaving cloth.</p>
+                <p style="font-family: Abhaya-Medium; font-size: 15pt;text-align: left;color:white;">Athena is the goddess of wisdom in ancient Greek mythology, and is considered the goddess of war, craftsmanship and strategy. She is the figure of wisdom, skill, and strategy, and her wit makes her a concern in military and political strategy. Similar to product management, Athena was a decision maker, innovator and leader. She led the Greek army to victory in battle and also innovated in the field of handicrafts, such as pioneering the method of weaving cloth.</p>
             </div>
-        </div>
+        </div> -->
     </section>
 
     
