--- a/-imagine/imagine.html
+++ b/-imagine/imagine.html
@@ -4,6 +4,16 @@
   <meta charset="UTF-8">
   <title>Chehaoyuan</title>
   <link rel="stylesheet" href="./css/imaginestyle.css">
+  <script>
+    var _hmt = _hmt || [];
+    (function() {
+      var hm = document.createElement("script");
+      hm.src = "https://hm.baidu.com/hm.js?394230268d0f754de608eb4e72165042";
+      var s = document.getElementsByTagName("script")[0]; 
+      s.parentNode.insertBefore(hm, s);
+    })();
+    </script>
+    
 </head>
 <style>
     .imaginepic{
