--- a/Emodetection/Emodetection.html
+++ b/Emodetection/Emodetection.html
@@ -16,8 +16,8 @@
     
 </head>
 <body style="background-color: black;">
-    <div style="width: 100%;height: 70px;background-color: blue;">
-      <div ></div>
+    <div style="width: 100%;height: 70px;">
+      <div style="height: 30px;"></div>
       <a href="../-design/design.html">Back</a>
     </div>
     <div>
