--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <div style="height: 5px; background-color: transparent;"></div>
         <div class="bannerword">
             <div style="height: 40px;width: 6.25%;background-color: transparent;"></div>
-            <p style="font-family: Abhaya-Regular; font-size: 28pt;text-align: right;"><a href="./ARpackage/ARpackage.html" style="color: F9F9F9;background-color:transparent;">Design Changes Life >>></a></p>
+            <p style="font-family: Abhaya-Regular; font-size: 28pt;text-align: right;"><a href="./-design/design.html" style="color: F9F9F9;background-color:transparent;">Design Changes Life >>></a></p>
         </div>
         <div class="bannerword">
             <div style="height: 40px;width: 6.25%;background-color:transparent;"></div>
