feat: add loading

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         
 </head>
 <body>
+    <div class="lds-default" id="loading" style="position: absolute; z-index: 99999999; top: 48vh; left: 45vw; transition: .5s;"><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div></div>
     <canvas class="webgl" style="background-color: transparent">
     </canvas>
     <div class="loading-bar"></div>
