feat: add email link

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <div style="height: 5px; background-color: transparent;"></div>
         <div class="bannerwordemail">
             <div style="height: 40px;width: 6.25%;background-color: transparent;"></div>
-            <div class="email" style="color: white"><p style="margin-top:5px;font-family: Abhaya-Regular; font-size: 15pt;background-color: #0047ff;">email:chehaoyuan0116@163.com</p></div>
+            <div class="email" style="color: white"><p style="margin-top:5px;font-family: Abhaya-Regular; font-size: 15pt;background-color: #0047ff;"><a class="link" href="mailto:chehaoyuan0116@163.com">email:chehaoyuan0116@163.com</a></p></div>
         </div>
         <div style="height: 100px; background-color: transparent;"></div>
         <!-- <div class="intro">
